Minor build.gradle changes to make NetBeans happy.